# zDisplay

./: CMakeLists.txt  QOpenHDVideoHelper.hpp  QSGVideoTextureItem.cpp  QSGVideoTextureItem.h  README.md  SchedulingHelper.hpp  StringHelper.hpp  ThreadsafeQueue.hpp  TimeHelper.hpp  UDPReceiver.cpp  UDPReceiver.h  ZDisplay.cpp  avcodec.cpp  avcodec.h  avcodec_helper.hpp  build_cmake.sh  color_helper.h  decodingstatistcs.cpp  decodingstatistcs.h  gst_helper.hpp  increase_os_receive_buff_size.sh  install_deps.sh  mousehelper.cpp  mousehelper.h  push_to_pi.sh  qopenhd.cpp  qopenhd.h  qrenderstats.cpp  qrenderstats.h  rtpreceiver.cpp  rtpreceiver.h  texturerenderer.cpp  texturerenderer.h  video_ratio_helper.hpp
h264/: h264.cmake
qml/: main.qml  qml.qrc
qml/ui/elements/: AppSettings.qml
qml/video/: MainVideoQSG.qml
